--- a/ClotheOurKids.Web/Views/AboutUs/OurHistory.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/OurHistory.cshtml
@@ -23,7 +23,7 @@
     </section>
 </div>
 
-<div class="streak bg-light-blue white-text">
+<div class="streak bg-purple white-text">
     <div class="flex-center">
         <ul class="list-unstyled">
             <li><h2 class="h2-responsive wow fadeIn"><i class="fa fa-quote-left" aria-hidden="true"></i> Never worry about numbers. <br /> Help one person at a time, and always start with the person nearest you. <i class="fa fa-quote-right" aria-hidden="true"></i></h2></li>
@@ -39,49 +39,59 @@
         <!--Section heading-->
         <h1 class="section-heading">Laura's Story</h1>
         <!--Section description-->
-        <p class="lead section-description text-left black-text">
+        <p class="lead text-left block-text black-text">
             “It was completely a God idea,” says Clothe Our Kids Co-Founder Laura Mayer. 
             Never did she imagine what started out as an idea in her garage would turn into a national non-profit reaching thousands of children.
         </p>
-        <p class="section-description text-left black-text">
-            On November 13, 2013, Laura was cleaning out her children’s outgrown clothing and simply voiced, “Lord, I wish I knew someone who needed these clothes so I could give them away.” 
-            Immediately the thought, “Call the school,” dropped in her heart. She called and found out there was a real need in her school and often children would go without basic necessities like socks and undies, have shoes taped together, or own only 1 pair of pants.  
-            Hanging up the phone, Laura felt the need to help with this problem. Her first thought was to organize a school clothing drive but realized the school would be burdened for space to store items. 
-            Then it happened. Laura describes the next moment as feeling as though God “downloaded” the idea to start this organization, call it Clothe Our Kids, and work as a resource for local school teachers and counselors. 
-            That it would be a way to show these children His love and compassion, and provide confidence-building clothes and shoes to children in need. 
+
+        
+
+        <p class="text-left block-text black-text">
+            On November 13, 2013, Laura was cleaning out her children’s outgrown clothing and simply voiced, “Lord, I wish I knew someone who needed these clothes so I could give them away.”
+            Immediately the thought, “Call the school,” dropped in her heart. She called and found out there was a real need in her school and often children would go without basic necessities like socks and undies, have shoes taped together, or own only 1 pair of pants.
+            Hanging up the phone, Laura felt the need to help with this problem. Her first thought was to organize a school clothing drive but realized the school would be burdened for space to store items.
+            Then it happened. Laura describes the next moment as feeling as though God “downloaded” the idea to start this organization, call it Clothe Our Kids, and work as a resource for local school teachers and counselors.
+            That it would be a way to show these children His love and compassion, and provide confidence-building clothes and shoes to children in need.
             Laura felt as though God had laid the plan in front of her but gave her the choice whether to obey. She is so happy she said yes.
+        </p>       
+      
+        
+        <p class="blockquote blue-grey-text pull-right">
+            <i class="fa fa-quote-left" aria-hidden="true"></i>
+            "Lord, I wish I knew someone who needed these clothes so I could give them away"
+            <i class="fa fa-quote-right" aria-hidden="true"></i>
         </p>
 
-        <div class="streak streak-photo streak-section" style="background-image:url('../../Content/img/TennesseeCOK/FAQ.jpg')">
+        @*<div class="streak streak-photo streak-section" style="background-image:url('../../Content/img/TennesseeCOK/FAQ.jpg')">
             <div class="flex-center white-text rgba-black-strong">
                 <ul class="mb-0 list-unstyled">
                     <li><h2 class="h2-responsive"><i class="fa fa-quote-left" aria-hidden="true"></i>Lord, I wish I knew someone who needed <br class="d-none d-md-block" /> these clothes so I could give them away.<i class="fa fa-quote-right" aria-hidden="true"></i></h2></li>
                 </ul>                
             </div>
-        </div>
+        </div>*@
 
-        <p class="section-description text-left black-text">
+        <p class="text-left block-text black-text">
             Later that afternoon, Laura called her friend Shelley Lyon to share with her the plan to start Clothe Our Kids, and ask her to help. 
             Shelley immediately said yes and went on to explain that she had felt a tugging on her heart to help area children in need but had not known how to go about such. 
             Laura and Shelley announced their plans to friends and Clothe Our Kids was born. Within 8 weeks, Clothe Our Kids had outgrown the space in Laura’s garage and moved into a borrowed building downtown. 
         </p>
 
-        <p class="section-description text-left black-text">
+        <p class="text-left block-text black-text">
             What started in 2013 as a single operation in Lincoln County, TN, has grown to include 6 chapter locations in 2 states and has served thousands of children.
         </p>
 
 
-        <p class="section-description text-left black-text">
+        <p class="text-left block-text black-text">
             In 2018, Laura Mayer, along with Brandi Breeden, Chapter Director of Clothe Our Kids of North Alabama, started Clothe Our Kids Foundation. 
             COKF is a non-profit organization whose mission is to start Clothe Our Kids chapters all over the United States. 
             They do this by offering start-up grants, on-going director training and support, and traveling to share this vision that is changing the lives of children. 
         </p>
 
-        <p class="section-description text-left black-text">
+        <p class="text-left block-text black-text">
             More growth is in the plans. If you are interested in learning more about starting a Clothe Our Kids Chapter in your community, email the Foundation at clotheourkidsfoundation@gmail.com
         </p>
 
-        <p class="section-description text-left black-text">
+        <p class="text-left block-text black-text">
             At Clothe Our Kids we truly believe we are "Meeting a Need. Changing a Life."
         </p>
 
