--- a/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
@@ -23,7 +23,7 @@
     </section>  
 </div>
 
-<div class="streak bg-light-blue white-text">
+<div class="streak bg-purple white-text">
     <div class="flex-center">
         <ul>
             <li><h2 class="h2-responsive wow fadeIn"><i class="fa fa-quote-left" aria-hidden="true"></i> Never worry about numbers. <br /> Help one person at a time, and always start with the person nearest you. <i class="fa fa-quote-right" aria-hidden="true"></i></h2></li>
