--- a/ClotheOurKids.Web/Views/Donation/Give.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/Give.cshtml
@@ -25,7 +25,7 @@
 
 <div class="streak bg-red white-text">
     <div class="flex-center">
-        <ul>
+        <ul class="list-unstyled">
             <li><h2 class="h2-responsive wow fadeIn"><i class="fa fa-quote-left" aria-hidden="true"></i> You can give without loving, but you cannot love without giving. <i class="fa fa-quote-right" aria-hidden="true"></i></h2></li>
             <li><h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Amy Carmichael</h5></li>
         </ul>
@@ -40,7 +40,7 @@
         <p class="section-description wow fadein" data-wow-delay="0.4s">
             Your financial donations are needed to ensure we can continue clothing the children in need in our communities.
             <br />
-            <a href="http://www.lifewayegiving.org/dl/?uid=ClotP.O.210" class="btn btn-sm btn-primary btn-rounded mt-1">Donate Now</a>
+            <a href="http://www.lifewayegiving.org/dl/?uid=ClotP.O.210" class="btn btn-sm bg-green btn-rounded mt-1">Donate Now</a>
         </p>
 
     </section>
