--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -189,7 +189,7 @@
     <!--/Section: About Us-->
 </div>
 
-<div id="RequestStreak" class="streak bg-light-green white-text" style="width: 100%;">
+<div id="RequestStreak" class="streak bg-green white-text" style="width: 100%;">
     <div class="flex-center">
         @*<h1 class="wow fadeIn"><span id="RequestCount">0</span> Kids Clothed</h1>*@            
         <h1 class="wow fadeIn"><span id="RequestCount" class="count">@Model.RequestCount</span> Kids Clothed</h1> 
@@ -224,7 +224,7 @@
             <div class="col-12 mt-2 d-sm-none"></div>
 
             <div id="GetInvolved" class="col mr-2 wow fadeIn" data-wow-delay="0.2s">
-                <div class="card card-cascade bg-light-blue" style="height: 100%;">
+                <div class="card card-cascade bg-purple" style="height: 100%;">
                     <div class="card-body text-center">
                         <div class="mb-1">
                             <h4 class="card-title">Get Involved</h4>
