--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -38,7 +38,7 @@
                 <h4 class="mt-5">Collect</h4>
                 <p class="white-text mb-5">We rely 100% on your clothing and financial donations to ensure we can provide for all of the kids who need our help.</p>
             </div>
-            <div class="col bg-light-blue">
+            <div class="col bg-purple">
                 <h4 class="mt-5">Sort</h4>
                 <p class="white-text mb-5">
                     We inspect all of the apparel that we collect for stains, holes, or excessive wear and keep only the items that a child can wear with confidence.
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col bg-light-green mr-2">
+            <div class="col bg-green mr-2">
                 <h4 class="white-text mt-5">Pack</h4>
                 <p class="white-text mb-5">At the request of a school official or child advocate pack a bag of hand-picked clothing and necessary hygiene items.</p>
             </div>
