--- a/ClotheOurKids.Web/Views/Stories/Stories.cshtml
+++ b/ClotheOurKids.Web/Views/Stories/Stories.cshtml
@@ -10,9 +10,9 @@
         </div>
     </section>
 
-    <div class="streak bg-light-blue">
+    <div class="streak bg-purple">
         <div class="flex-center">
-            <ul>
+            <ul class="list-unstyled">
                 <li><h1 class="h1-responsive wow fadeIn" data-wow-delay="0.4s">Coming Soon...</h1></li>
             </ul>
         </div>
